# agp-tpf-utils

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
docker/test/: Dockerfile
src/tola/assembly/: __init__.py  assembly.py  assembly_stats.py  build_assembly.py  build_utils.py  format.py  fragment.py  gap.py  indexed_assembly.py  naming_utils.py  overlap_result.py  parser.py  scaffold.py  terminal_table.py
src/tola/fasta/: index.py  simple.py  stream.py
tests/: assembly_test.py  build_assembly_test.py  compare_test.py  fasta_test.py  format_test.py  fragment_test.py  gap_test.py  indexed_assembly_test.py  overlap_result_test.py  parser_test.py  pretext_to_asm_test.py  pretext_to_tpf_test.py  scaffold_test.py  terminal_table_test.py  utils.py
tests/data/: README.md
tests/data/bChlMac1_3/: bChlMac1-input.3.tpf  bChlMac1-pretext-to-tpf.3.chr_report.csv  bChlMac1-pretext-to-tpf.3.info.yaml  bChlMac1-pretext-to-tpf.hap1.3.primary.chromosome.list.csv  bChlMac1-pretext-to-tpf.hap1.3.primary.curated.tpf  bChlMac1-pretext-to-tpf.hap2.3.primary.chromosome.list.csv  bChlMac1-pretext-to-tpf.hap2.3.primary.curated.tpf  bChlMac1_3-pretext-to-tpf.1.haplotigs.tpf  bChlMac1_3-pretext-to-tpf.chr_report.csv  bChlMac1_3-pretext-to-tpf.hap1.chromosome.list.csv  bChlMac1_3-pretext-to-tpf.hap1.chromsomes.list.csv  bChlMac1_3-pretext-to-tpf.hap1.tpf  bChlMac1_3-pretext-to-tpf.hap2.1.primary.curated.tpf  bChlMac1_3-pretext-to-tpf.hap2.chromosome.list.csv  bChlMac1_3-pretext-to-tpf.hap2.chromsome.list.csv  bChlMac1_3-pretext-to-tpf.hap2.chromsomes.list.csv  bChlMac1_3-pretext-to-tpf.hap2.tpf  bChlMac1_3-pretext-to-tpf.haplotigs.tpf  bChlMac1_3-pretext-to-tpf.info.yaml  bChlMac1_3-pretext-to-tpf_HAP1.tpf  bChlMac1_3-pretext-to-tpf_HAP2.tpf  bChlMac1_3-pretext-to-tpf_Hap1.tpf  bChlMac1_3-pretext-to-tpf_Hap2.tpf  bChlMac1_3-pretext-to-tpf_info.yaml  bChlMac1_3-pretext.agp  chrs_HAP1.csv  chrs_HAP2.csv  chrs_Hap2.csv
tests/data/csSphGirg1/: csSphGirg1-input.tpf  csSphGirg1-pretext.agp  (+2 more)
tests/fasta/: test.fa  test.fa.agp  test.fa.fai
(+135 files in other folders)
