[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tola-agp-tpf-utils"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pytest",
    "ruff",
    'importlib-metadata; python_version>="3.8"',
]

[project.scripts]
asm-format = "tola.assembly.scripts.asm_format:cli"
pretext-to-tpf = "tola.assembly.scripts.pretext_to_tpf:cli"

[tool.setuptools.packages.find]
where = ["src"]
