[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tola-agp-tpf-utils"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pytest",
    "ruff",
    'importlib-metadata; python_version>="3.10"',
]

[project.scripts]
asm-format = "tola.assembly.scripts.asm_format:cli"
pretext-to-tpf = "tola.assembly.scripts.pretext_to_tpf:cli"
find-overlaps = "tola.assembly.scripts.find_overlaps:cli"

[tool.setuptools.packages.find]
where = ["src"]
