[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tola-agp-tpf-utils"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pytest",
    "pyyaml",
    "ruff",
    'importlib-metadata; python_version>="3.10"',
]

[project.scripts]
asm-format = "tola.assembly.scripts.asm_format:cli"
pretext-to-asm = "tola.assembly.scripts.pretext_to_tpf:cli"
pretext-to-tpf = "tola.assembly.scripts.pretext_to_tpf:cli"
find-overlaps = "tola.assembly.scripts.find_overlaps:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "ISC",
    "LOG",
    "N",
    "PYI",
    "S",
    "SIM",
    "U"
]
ignore = [
    "COM812",
    "C901"
]

[tool.ruff.lint.per-file-ignores]
"{test_*,*_test,conftest}.py" = ["S101"]
